<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageview_title"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linear_age"
        app:layout_constraintTop_toBottomOf="@+id/imageview_title"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/string_name"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:hint="@string/string_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_text_size"
            android:theme="@style/Theme.AppCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linear_weight"
        app:layout_constraintTop_toBottomOf="@+id/linear_name"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/string_age"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:hint="@string/string_age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_text_size"
            android:theme="@style/Theme.AppCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linear_size"
        app:layout_constraintTop_toBottomOf="@+id/linear_age"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/string_weight"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:hint="@string/string_weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_text_size"
            android:theme="@style/Theme.AppCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linear_imc"
        app:layout_constraintTop_toBottomOf="@+id/linear_weight"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/string_size"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <EditText
            android:id="@+id/edit_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:hint="@string/string_size"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/profile_text_size"
            android:theme="@style/Theme.AppCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/linear_size"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/btn_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00f"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/string_imc"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <TextView
            android:id="@+id/tv_imc"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/imc"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />

        <TextView
            android:id="@+id/tv_imc_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/tv_padding"
            android:text="@string/imc_result"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#00f"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageview_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>